2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* tokenizer-test-1.test: Tests for |<span ===>| is added (HTML5
	revision 1292).  Tests for & at the end of attribute value
	are added (HTML5 revision 1296).  Tests for bogus comments
	are added (HTML5 revision 1297).  Tests for |=| in
	unquoted attribute values are added (HTML5 revision 1299). 
	Tests for single or double quotes in unquoted attribute
	values or attribute names and tests for missing spaces
	between attributes are added (HTML5 revision 1303).

2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* content-model-atom-1.dat: New test data are added.

2008-03-02  Wakaba  <wakaba@suika.fam.cx>

	* content-model-1.dat: Test data for |<area>| are added.

	* content-model-2.dat: Test data for |<img ismap>| are added.

2008-03-01  Wakaba  <wakaba@suika.fam.cx>

	* content-model-1.dat: |address| content model tests
	are added.

2008-03-01  Wakaba  <wakaba@suika.fam.cx>

	* tokenizer-test-1.test: Updated (HTML5 recision 1286).

	* content-model-2.dat: Updated (HTML5 revision 1275).

2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* content-model-1.dat: Test data for |header| and |footer|
	exclusions of sectioning contents are added (c.f. HTML5
	revision 1250).

2008-02-26  Wakaba  <wakaba@suika.fam.cx>

	* content-model-1.dat: Figure caption is now optional (HTML5
	revision 1240).  Add test data for |ol reversed| (HTML5
	revision 1248).

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* content-model-2.dat: Test data for |acronym|, |big|, |tt|, |s|,
	|strike|, and |u| are added.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* content-model-1.dat, content-model-2.dat: Some test
	results are updated.  New test data on non-standard
	attributes are added.  Note that some test results do
	still need to be updated.

2008-02-24  Wakaba  <wakaba@suika.fam.cx>

	* content-model-1.dat: Some test results on |meta|
	in |noscript| are updated.

2008-02-23  Wakaba  <wakaba@suika.fam.cx>

	* content-model-1.dat: Some test results are updated.