@@ -1,7 +1,7 @@
 1..1502
 # Running under perl version 5.008007 for linux
-# Current time local: Mon Mar  3 08:36:27 2008
-# Current time GMT:   Sun Mar  2 23:36:27 2008
+# Current time local: Mon Mar  3 08:49:25 2008
+# Current time GMT:   Sun Mar  2 23:49:25 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
