@@ -1,7 +1,7 @@
-1..416
+1..420
 # Running under perl version 5.008007 for linux
-# Current time local: Mon Mar  3 08:36:12 2008
-# Current time GMT:   Sun Mar  2 23:36:12 2008
+# Current time local: Mon Mar  3 08:49:15 2008
+# Current time GMT:   Sun Mar  2 23:49:15 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
@@ -152,7 +152,12 @@ ok 127
 ok 128
 ok 129
 ok 130
-ok 131
+not ok 131
+# Test 131 got: "$VAR1 = [\n          qq'ParseError',\n          qq'ParseError',\n          qq'ParseError',\n          [\n            qq'DOCTYPE',\n            qq'!',\n            undef,\n            qq'',\n            1\n          ]\n        ];\n" (t/HTML-tokenizer.t at line 158 fail #131)
+#     Expected: "$VAR1 = [\n          qq'ParseError',\n          qq'ParseError',\n          qq'ParseError',\n          [\n            qq'DOCTYPE',\n            qq'!',\n            undef,\n            qq'',\n            0\n          ]\n        ];\n" (<!doctype! system""?: qq'<!doctype! system""?')
+#     Line 10 is changed:
+#      - "            0\n"
+#      + "            1\n"
 ok 132
 ok 133
 ok 134
@@ -448,3 +453,7 @@ ok 413
 ok 414
 ok 415
 ok 416
+ok 417
+ok 418
+ok 419
+ok 420
