@@ -1,3 +1,8 @@
+2008-03-03  Wakaba  <wakaba@suika.fam.cx>
+
+	* tokenizer-test-1.test: New tests on trailing garbage
+	after SYSTEM literal (HTML5 revision 1306) are added.
+
 2008-03-02  Wakaba  <wakaba@suika.fam.cx>
 
 	* tokenizer-test-1.test: Tests for |<span ===>| is added (HTML5
